# eyetracker-CPLUS

./: CMakeLists.txt  README.md
include/: gaze_calibration.hpp
src/: gaze_calibration.cpp  main.cpp
